RESOLVED FIXED130048
Fix three leaks
https://bugs.webkit.org/show_bug.cgi?id=130048
Summary Fix three leaks
Simon Fraser (smfr)
Reported 2014-03-10 15:57:54 PDT
Fix three leaks
Attachments
Patch (4.63 KB, patch)
2014-03-10 15:59 PDT, Simon Fraser (smfr)
andersca: review+
Simon Fraser (smfr)
Comment 1 2014-03-10 15:59:07 PDT
Anders Carlsson
Comment 2 2014-03-10 15:59:53 PDT
Comment on attachment 226346 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=226346&action=review > Source/WebCore/page/ios/UserAgentIOS.mm:47 > + RetainPtr<NSDictionary> systemInfo = adoptNS([[NSDictionary alloc] initWithContentsOfFile:[platformSystemRootDirectory() stringByAppendingPathComponent:@"System/Library/CoreServices/SystemVersion.plist"]]); Can just use auto systemInfo =.
Simon Fraser (smfr)
Comment 3 2014-03-10 16:03:31 PDT
Joseph Pecoraro
Comment 4 2014-03-10 16:49:16 PDT
Comment on attachment 226346 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=226346&action=review > Source/WebKit2/Shared/API/Cocoa/WKRemoteObjectCoder.mm:512 > + return [result autorelease]; Shouldn't this also release result in the NSException raise cases if the alloc succeeded? Could the autorelease move up to line 500?
Note You need to log in before you can comment on or make changes to this bug.