Fix three leaks https://bugs.webkit.org/show_bug.cgi?id=130048

Reviewed by Anders Carlsson.

Source/WebCore:

The NSDictionary was leaked.

* page/ios/UserAgentIOS.mm:
(WebCore::osMarketingVersion):

Source/WebKit2:

* Shared/API/Cocoa/WKRemoteObjectCoder.mm:
(decodeObject): Code is simpler and less leaky without the RetainPtr.
* UIProcess/API/Cocoa/WKNavigationAction.mm: Fix _originalURL leak
by making it a RetainPtr and implementing the getter and setter.
(-[WKNavigationAction _setOriginalURL:]):
(-[WKNavigationAction _originalURL]):

Canonical link: https://commits.webkit.org/148032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165412 268f45cc-cd09-0410-ab3c-d52691b4dbfc