Source/WebKit2/Shared/API/Cocoa/WKRemoteObjectCoder.mm
@@ -497,7 +497,7 @@ static id decodeObject(WKRemoteObjectDecoder *decoder)
     if (objectClass == [NSInvocation class])
         return decodeInvocation(decoder);
 
-    RetainPtr<id> result = [objectClass allocWithZone:decoder.zone];
+    id result = [objectClass allocWithZone:decoder.zone];
     if (!result)
         [NSException raise:NSInvalidUnarchiveOperationException format:@"Class \"%s\" returned nil from +alloc while being decoded", className.data()];
 
@@ -509,7 +509,7 @@ static id decodeObject(WKRemoteObjectDecoder *decoder)
     if (!result)
         [NSException raise:NSInvalidUnarchiveOperationException format:@"Object of class \"%s\" returned nil from -awakeAfterUsingCoder: while being decoded", className.data()];
 
-    return [result.leakRef() autorelease];
+    return [result autorelease];
 }
 
 static id decodeObject(WKRemoteObjectDecoder *decoder, const ImmutableDictionary* dictionary, NSSet *allowedClasses)
